task-6/Bootstrap in view

--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -5,7 +5,7 @@
   <input type="submit" value="Buscar">
 </form>
 
-<table>
+  <table class="table table-striped px-5 ">
   <thead>
     <tr>
       <th>Série</th>
